Revision history for Perl extension IPC::System::Simple.

0.11
	- Drop-in system() replacement available.
	- Simplified synopsis statement.
	- Provided advanced usage documentation.
	- Added comparison to other system APIs.
	- Updated Changes to put most recent changes at top.

0.10  Thu May 15 00:39:59 AUSEST 2008
	- Multi-arg captures now work on Perl 5.6.x. (RT #35866)
	- Minor corrections to diagnostics documentation.
	- Adjusted module summary.

0.09  Mon May 12 23:38:29 AUSEST 2008
	- Test suite now provides better diagnostics if taint
	  tests fail unexpectedly early.
	- Multi-argument run() will now search $ENV{PATH}
	  under Win32.
	- Documented $ENV{PATH} foibles on Win32 systems under
	  the Windows-specific notes section of the documentation.
	- Implemented capture(), which is the equivalent
	  of run() for backticks.
	- General documentation improvements and clarifications,
	  thanks to Jacinta Richardson.
	- The special value EXIT_ANY (aka [-1]) can be used to
	  indicate that any exit value is acceptable from a process.
	- Added author-only Perl::Critic tests.
	- Updated diagnostics section in POD.
	- License changed to that of Perl 5.6.0, or any later version.
	- LICENSE file added to distribution.
	- Moved to Module::Install for build system.
	- Better failures when seeing unexpected things from POSIX.pm
	- Support for detecting core-dumps added.
	- All failure messages now use double-quotes when quoting
	  variable sections.
	- Diagnostics documentation rearraged to have most common
	  errors listed first.

0.08  Sun Apr 13 13:38:49 AUSEST 2008
	- Numerous documentation fixes thanks to Matt Kraai
	  (RT #34896)
	- Updated t/07_taint.t to not fail on systems that have
	  zero-length environment strings.
	- Updated taint checks to always run on 5.6.x, under
	  0.07 they would never run on older perls.

0.07  Sat Apr 12 11:57:28 AUSEST 2008
	- Changed tests to use SIGKILL rather than SIGINT to avoid
	  complications on systems where SIGINT is masked.